--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
 requires-python = ">=3.11"
-dependencies = []
+dependencies = [
+    "bardapi>=1.0.0",
+    "flask>=3.1.1",
+    "requests>=2.32.4",
+    "sift-stack-py>=0.7.0",
+]
